test/code/test_class_visibility_protected.out

Fatal error: Cannot access protected property Hello::$hello in {{CWD}}/test/code/test_class_visibility_protected.php on line 8
