test/code/test_class_visibility_protected.php
<?php

class Hello {
    protected $hello = "world";
}

$h = new Hello();
print "hello " . $h->hello . "\n";

